--- a/FavoritePodcasts/Base.lproj/Main.storyboard
+++ b/FavoritePodcasts/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZiN-Gn-VQW">
-                                                    <rect key="frame" x="20" y="11" width="238" height="20.5"/>
+                                                    <rect key="frame" x="20" y="11" width="97" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -38,12 +38,9 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="nNr-1o-MVS">
-                                                    <rect key="frame" x="266" y="20.5" width="128" height="159.5"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="128" id="NIU-aK-5bn"/>
-                                                        <constraint firstAttribute="width" constant="128" id="gzO-vF-B9L"/>
-                                                    </constraints>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="nNr-1o-MVS">
+                                                    <rect key="frame" x="266" y="2" width="148" height="198"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode#" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ntS-Zs-LHF">
                                                     <rect key="frame" x="20" y="168" width="64" height="21"/>
@@ -52,16 +49,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="74Z-XD-UID">
-                                                    <rect key="frame" x="20" y="90" width="238" height="21"/>
+                                                    <rect key="frame" x="20" y="90" width="95.5" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="nNr-1o-MVS" firstAttribute="leading" secondItem="74Z-XD-UID" secondAttribute="trailing" constant="8" id="1Dc-H0-yhB"/>
                                                 <constraint firstItem="Ldc-rz-KNN" firstAttribute="leading" secondItem="y11-JH-P9t" secondAttribute="leadingMargin" id="2h8-wE-wtF"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="nNr-1o-MVS" secondAttribute="bottom" constant="8" id="79O-Ko-g0o"/>
                                                 <constraint firstItem="74Z-XD-UID" firstAttribute="leading" secondItem="y11-JH-P9t" secondAttribute="leadingMargin" id="7iY-Ge-7sG"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="Ldc-rz-KNN" secondAttribute="bottom" constant="29" id="9K9-Rv-LrL"/>
                                                 <constraint firstItem="ZiN-Gn-VQW" firstAttribute="leading" secondItem="y11-JH-P9t" secondAttribute="leadingMargin" id="GOD-5F-1e2"/>
@@ -69,9 +64,6 @@
                                                 <constraint firstItem="ntS-Zs-LHF" firstAttribute="bottom" secondItem="y11-JH-P9t" secondAttribute="bottomMargin" id="dM4-qH-egT"/>
                                                 <constraint firstItem="Ldc-rz-KNN" firstAttribute="top" secondItem="74Z-XD-UID" secondAttribute="bottom" constant="31" id="dR1-Ja-V6D"/>
                                                 <constraint firstItem="ZiN-Gn-VQW" firstAttribute="top" secondItem="y11-JH-P9t" secondAttribute="topMargin" id="dpI-xp-tjd"/>
-                                                <constraint firstItem="nNr-1o-MVS" firstAttribute="trailing" secondItem="y11-JH-P9t" secondAttribute="trailingMargin" id="juc-4z-sfN"/>
-                                                <constraint firstItem="nNr-1o-MVS" firstAttribute="top" secondItem="y11-JH-P9t" secondAttribute="topMargin" constant="8" id="nRx-u8-HFk"/>
-                                                <constraint firstItem="nNr-1o-MVS" firstAttribute="leading" secondItem="ZiN-Gn-VQW" secondAttribute="trailing" constant="8" id="nkh-WQ-1pu"/>
                                                 <constraint firstItem="ntS-Zs-LHF" firstAttribute="leading" secondItem="y11-JH-P9t" secondAttribute="leadingMargin" id="wBZ-my-h6V"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -86,7 +78,7 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="ffh-Vc-Soh">
+                            <searchBar contentMode="redraw" placeholder="Search Podcasts" translatesAutoresizingMaskIntoConstraints="NO" id="ffh-Vc-Soh">
                                 <rect key="frame" x="0.0" y="88" width="414" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
@@ -166,6 +158,9 @@
                                 <state key="normal" image="heart" catalog="system">
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="300" scale="large" weight="ultraLight"/>
                                 </state>
+                                <connections>
+                                    <action selector="favoriteButtonPressed:" destination="88F-L9-NCv" eventType="touchUpInside" id="zNM-ri-ta5"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -251,10 +246,73 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zac-hR-BWz">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="favoritePodcastCell" rowHeight="190" id="7rX-8y-6pu" customClass="PodcastCell" customModule="FavoritePodcasts" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="190"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7rX-8y-6pu" id="ke8-0q-T1S">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="190"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FNd-hx-cbt">
+                                                    <rect key="frame" x="16" y="11" width="97" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iZT-7I-2Tt">
+                                                    <rect key="frame" x="16" y="132" width="41.5" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode#" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hdc-1Q-Wzi">
+                                                    <rect key="frame" x="16" y="158" width="64" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1cL-zU-6xM">
+                                                    <rect key="frame" x="16" y="80" width="95.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ofe-S7-2q1">
+                                                    <rect key="frame" x="229" y="17.5" width="165" height="160"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="hdc-1Q-Wzi" firstAttribute="leading" secondItem="ke8-0q-T1S" secondAttribute="leadingMargin" id="U06-hj-rev"/>
+                                                <constraint firstItem="iZT-7I-2Tt" firstAttribute="top" secondItem="1cL-zU-6xM" secondAttribute="bottom" constant="31" id="VJp-eV-9hX"/>
+                                                <constraint firstItem="iZT-7I-2Tt" firstAttribute="leading" secondItem="ke8-0q-T1S" secondAttribute="leadingMargin" id="WG2-X7-Qjm"/>
+                                                <constraint firstItem="1cL-zU-6xM" firstAttribute="leading" secondItem="ke8-0q-T1S" secondAttribute="leadingMargin" id="bMZ-7d-fXb"/>
+                                                <constraint firstItem="hdc-1Q-Wzi" firstAttribute="bottom" secondItem="ke8-0q-T1S" secondAttribute="bottomMargin" id="cu4-fQ-dYZ"/>
+                                                <constraint firstItem="FNd-hx-cbt" firstAttribute="leading" secondItem="ke8-0q-T1S" secondAttribute="leadingMargin" id="hCN-Ib-La3"/>
+                                                <constraint firstItem="FNd-hx-cbt" firstAttribute="top" secondItem="ke8-0q-T1S" secondAttribute="topMargin" id="hN3-EO-kqP"/>
+                                                <constraint firstItem="hdc-1Q-Wzi" firstAttribute="top" secondItem="iZT-7I-2Tt" secondAttribute="bottom" constant="8" id="r2Q-cz-Ji3"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="iZT-7I-2Tt" secondAttribute="bottom" constant="29" id="tV0-s8-Ue3"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="artistNameLabel" destination="1cL-zU-6xM" id="x2u-lv-aja"/>
+                                            <outlet property="episodesCountLabel" destination="hdc-1Q-Wzi" id="D9o-3z-Syc"/>
+                                            <outlet property="genreLabel" destination="iZT-7I-2Tt" id="hzo-H0-t7l"/>
+                                            <outlet property="podcastImage" destination="ofe-S7-2q1" id="mrX-fi-rNP"/>
+                                            <outlet property="podcastShowLabel" destination="FNd-hx-cbt" id="l7E-26-fXn"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search by users name" translatesAutoresizingMaskIntoConstraints="NO" id="OZL-ab-jTQ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="0Ef-xa-gVi"/>
@@ -263,7 +321,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ogc-FY-CO4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1920" y="683"/>
+            <point key="canvasLocation" x="1918.840579710145" y="682.36607142857144"/>
         </scene>
     </scenes>
     <resources>
